--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DataBases"
-        tools:targetApi="31">
+        tools:targetApi="34">
+        <activity
+            android:name=".ManageCustomersActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ManageCompaniesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AdminActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
