rashad - add company working but adding 3 copies to the listview at admin's ManageCompaniesActivity "Bug"

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.DataBases"
         tools:targetApi="34">
         <activity
+            android:name=".UpdateCustomerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddCustomerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".UpdateCompanyActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddCompanyActivity"
+            android:exported="false" />
+        <activity
             android:name=".ManageCustomersActivity"
             android:exported="false" />
         <activity
