--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -56,6 +57,9 @@
             android:exported="false"/>
         <activity
             android:name=".CouponsByCategoryActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".CompanyViewProfileActivity"
             android:exported="false"/>
         <activity
             android:name=".MainActivity"
