--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,9 @@
             android:name=".CouponsByCategoryActivity"
             android:exported="false"/>
         <activity
+            android:name=".CompanyViewProfileActivity"
+            android:exported="false"/>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
